vlib/v/checker/tests/enum_empty.out
vlib/v/checker/tests/enum_empty.vv:1:1: error: enum cannot be empty
    1 | enum Empty {}
      | ~~~~~~~~~~
